# FontSplitter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: combine.rs  lib.rs  main.rs  split.rs
src/utils/: data_format.rs  parser.rs  validate_path.rs
