[package]
name = "font-splitter"
version = "0.1.0"
edition = "2021"
description = "A tool to split and recombobulate geometry dash font sprite sheets"
repository = "https://github.com/Cobular/FontSplitter"
readme = "README.md"
license = "GPLv3"
license-file = "LICENSE.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
clap = { version = "3.0.10", features = ["derive"] }
bmfont_parser="0.2"
nom = "7.1.0"